# ts-unused

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: checker.rs  lib.rs  main.rs  new_checker.rs  parsed.rs  parser.rs  types.rs  visitor.rs
src/data/: test.ts
tests/: single_file_test.rs  single_file_test.ts
tests/data/: test.ts  test.tsx
