[package]
name = "ts-unused"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stc_ts_type_checker = { git = "https://github.com/dudykr/stc.git" }
stc_ts_env = { git = "https://github.com/dudykr/stc.git" }
stc_ts_file_analyzer = { git = "https://github.com/dudykr/stc.git" }
stc_ts_module_loader = { git = "https://github.com/dudykr/stc.git" }
stc_ts_builtin_types = { git = "https://github.com/dudykr/stc.git" }
stc_ts_types = { git = "https://github.com/dudykr/stc.git" }
stc_ts_testing = { git = "https://github.com/dudykr/stc.git" }
stc_ts_ast_rnode = { git = "https://github.com/dudykr/stc.git" }
stc_ts_storage =  { git = "https://github.com/dudykr/stc.git" }
rnode = { git = "https://github.com/dudykr/stc.git" }
swc_common = { version = "0.29.31", features = ["tty-emitter"] }
swc_ecma_ast = "*"
swc_ecma_parser = "*"
swc_ecma_visit = "*"
